--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="description" content="Timer Pomodoro - Aumente sua produtividade com a técnica Pomodoro" />
     <meta name="theme-color" content="#ef4444" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
